# llmusage

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  cliff.toml  install.sh
.github/workflows/: audit.yml  ci.yml  homebrew.yml  publish.yml  release.yml
.spec/: prd.md
.spec/implementation/base-requirements-claude-implementation/: impl_160426003148.md
.specs/: prd.md
.specs/implementation/: schema-migrations.md
.specs/implementation/changelog-automation/: impl_170426_changelog_automation.md
.specs/implementation/changelog-pr-based-update/: impl_170426_changelog_pr_based_update.md
.specs/implementation/cursor-composer-sentinel/: impl_170426_cursor_composer_sentinel.md
.specs/implementation/data-correctness/: impl_170426_data_correctness.md
.specs/implementation/fallback-pricing/: impl_170426_fallback_pricing.md
.specs/implementation/gemini-cli-jsonl-support/: impl_20260417004000.md
.specs/implementation/ide-support-strict-mode/: impl_160426_ide_support_strict.md
.specs/implementation/install-script/: impl_170426_install_script.md
.specs/implementation/quick-bugs-bundle/: impl_170426_quick_bugs_bundle.md
.specs/tasks/: openrijal-issue-triage.md
.specs/validation/: schema-migrations.md
src/: config.rs  costs.rs  display.rs  lib.rs  main.rs  models.rs
src/collectors/: anthropic.rs  claude_code.rs  codex.rs  cursor.rs  deepseek.rs  gemini.rs  gemini_cli.rs  http.rs  mod.rs  ollama.rs  openai.rs  opencode.rs  openrouter.rs
src/db/: mod.rs  queries.rs  schema.rs
(+30 files in other folders)
